syntax = "proto3";

package pachyderm.worker.pipeline.transform;
option go_package = "github.com/pachyderm/pachyderm/src/server/worker/pipeline/transform";

import "gogoproto/gogo.proto";

import "client/pfs/pfs.proto";
import "client/pps/pps.proto";
import "server/worker/common/common.proto";

// DatumInputs is the message contained in the object pointed to by the
// DatumData.datums field.
message DatumInputs {
  repeated common.Input inputs = 1;
  int64 index = 2;
}

message DatumInputsList {
  repeated DatumInputs datums = 1;
}

// HashtreeObjects is the message contained in the object generated by the
// registry when a job moves from the 'running' state to the 'merging' state. It
// contains references to all generated hashtree chunks from the job, which must
// be merged into the final hashtree.
message HashtreeObjects {
  repeated string chunk_objects = 1;
  repeated string stats_objects = 2;
}

message RecoveredDatums {
  repeated string hashes = 1;
}

message RecoveredDatumObjects {
  repeated string objects = 1;
}

message HashtreeInfo {
  // Address used for fetching a cached version directly from the worker
  string address = 1;

  // The subtask ID can be used to fetch the cached hashtree directly from the worker
  string subtask_id = 2 [(gogoproto.customname) = "SubtaskID"];

  // The object can be used to fetch the hashtree from object storage if the
  // worker cannot be reached or does not have it cached.
  string object = 3;
}

message DatumStats {
  pps.ProcessStats process_stats = 1;
  int64 datums_processed = 2;
  int64 datums_skipped = 3;
  int64 datums_failed = 5;
  int64 datums_recovered = 6;
  string failed_datum_id = 8 [(gogoproto.customname) = "FailedDatumID"];
}

message DatumData {
  // Inputs
  string job_id = 1 [(gogoproto.customname) = "JobID"];
  string datums_object = 8;
  pfs.Commit output_commit = 3;

  // Outputs
  DatumStats stats = 4;
  HashtreeInfo chunk_hashtree = 5;
  HashtreeInfo stats_hashtree = 6;
  string recovered_datums_object = 7;
}

message MergeData {
  // Inputs
  string job_id = 1 [(gogoproto.customname) = "JobID"];
  repeated HashtreeInfo hashtrees = 2;
  pfs.Object parent = 3;
  int64 shard = 4;
  bool stats = 5;

  // Outputs
  pfs.Object tree = 6;
  uint64 tree_size = 7;
}
